--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
-<h1>Nilu is cool</h1>
-<<<<<<< HEAD
-<img src="../../../Downloads/IMG_1974.PNG" alt="Nilu's pic">
+<link rel="stylesheet" type="text/css" href="index.css">
+<div>
+	<img class="banner" src="firstpic.jpg">
 
-<p> 
+	<!-- <h1>
+		red
+	</h1>\ -->
+</div>
+	
+<div class="title">
+	<div class="title-and-links-container">
+		<div class="title-container">
+			<h1>
+				Nilu Khadka
+			</h1>
+		</div>
 
-</p>
-=======
->>>>>>> 45bbe5d694d540b2ed6fe489902e53a98ce32dc8
+		<div class="links-container">
+			<a class="link" href="https://google.com">Home</a>
+			<a class="link" href="https://www.linkedin.com/in/nilu-khadka-75822197/">About me</a>
+			<a class="link" href="mailto:nilu.khadka@mavs.uta.edu">Email me</a>
+		</div>	
+	</div>
+	
+	<div>
+		<div class="picture-container">
+			<img class="picture" src="Nilu_pic.jpg">
+		</div>
+
+		<div class="content-container">
+			<div class="text">
+				<h1>
+					I love creating digital experinces that impacts and adds value to peoples' lives.
+				</h1>			
+			</div>
+			<a href="http://www.uta.edu/uta/">University of Texas</a>
+		</div>
+	</div>	
+</div>
